# sdgame

./: .gitignore
.github/workflows/: build-apk.yml
app/: build.gradle
app/jni/: Android.mk  CMakeLists.txt
app/jni/src/: Android.mk  main.cpp
